--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,4 +47,5 @@
 
     {% include analytics.html %}
   </body>
+  <div> Gracias por su visita. Si deseas comentar envíame un email. </div>
 </html>
