--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,11 +41,11 @@
       <div class="container">
         <footer class="footer">
           {% include svg-icons.html %}
+          <p> Gracias por su visita. Si desea comentar algo envíeme un email.</p>
         </footer>
       </div>
     </div>
 
     {% include analytics.html %}
   </body>
-  <div> Gracias por su visita. Si deseas comentar envíame un email. </div>
 </html>
