--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
   </div>
 
   <div class="date">
-    Escrito en {{ page.date }}
+    Escrito el {{ page.date }}
   </div>
 
   {% include disqus.html %}
